--- a/src/components/story/StoryEntry.css
+++ b/src/components/story/StoryEntry.css
@@ -1,4 +1,5 @@
 .story-entry {
+    z-index: inherit;
     display: flex;
     flex-direction: row;
 }
