--- a/src/components/story/StoryLine.css
+++ b/src/components/story/StoryLine.css
@@ -1,4 +1,5 @@
 .story-line {
+    z-index: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
